fix: address book overflow

--- a/src/components/Wallet/Security/Security.scss
+++ b/src/components/Wallet/Security/Security.scss
@@ -196,6 +196,16 @@
       }
     }
 
+    #addresses {
+      .item {
+        padding-left: 15px !important;
+
+        .details {
+          padding-right: 5px;
+        }
+      }
+    }
+
     #backup {
       flex-direction: column;
       gap: 1em;
